tests/fail/add-list-types.virtue
[1, 2, 3] + ["4", "5", "6"]

# error: incompatible types
#  --> test.virtue:1:11
#    |
#  1 | [1, 2, 3] + ["4", "5", "6"]
#    |           ^ can't add list int and list string
#
